objects/Device_Export_Control_Junction__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Device_ID__c</fullName>
        <formula>Device__r.CRMDID__c</formula>
        <label>CRM Device ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Device__r.Design_Partner__c)),Device__r.Design_Partner__r.Name,  Device__r.Account__r.Name)</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Name__c</fullName>
        <formula>Device__r.Name</formula>
        <label>Device Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Device - Export Control Junctions</relationshipLabel>
        <relationshipName>Device_Export_Control_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Export_Control_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Export Control Form</label>
        <referenceTo>Export_Control_Form__c</referenceTo>
        <relationshipLabel>Device - Export Control Junctions</relationshipLabel>
        <relationshipName>Device_Export_Control_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Export_Control_ID__c</fullName>
        <formula>IF(ISPICKVAL($Profile.UserType ,&apos;PowerCustomerSuccess&apos;),
HYPERLINK(&quot;ExportControlEdit?deviceid=&quot;+Device__c,Export_Control_Form__r.Name,&quot;_top&quot;),
HYPERLINK(&quot;/apex/ExportControlEdit?deviceid=&quot;+Device__c,Export_Control_Form__r.Name,&quot;_top&quot;))</formula>
        <label>Export Control ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Control_Number__c</fullName>
        <formula>Export_Control_Form__r.Name</formula>
        <label>Export Control Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Control_Template__c</fullName>
        <formula>TEXT(Device__r.Account__r.Export_Control_Template__c)</formula>
        <label>Export Control Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <formula>Text(Device__r.Fab__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fab</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <formula>LastModifiedBy.LastName + &apos;, &apos; + LastModifiedBy.FirstName + &apos;(&apos; + LastModifiedBy.Username + &apos;)&apos;</formula>
        <label>LastModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_in_PDF__c</fullName>
        <formula>IF(Export_Control_Form__r.isNewECForm__c,IF((Text(Export_Control_Form__r.Status__c)=&apos;Submitted&apos;||Text(Export_Control_Form__r.Status__c)=&apos;Approved&apos;) , 
IF(CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)),&apos;GlobalfoundryView&apos;),
HYPERLINK(&quot;ExportControlPdfNEW?deviceid=&quot;+Device__c+&quot;&amp;retURL=&quot;+Device__c,&quot;Export Control PDF&quot;,&quot;_blank&quot;),
HYPERLINK(&quot;/apex/ExportControlPdfNEW?deviceid=&quot;+Device__c+&quot;&amp;retURL=&quot;+Device__c,&quot;Export Control PDF&quot;,&quot;_blank&quot;)), &quot;PDF link is Inactive&quot;),IF((Text(Export_Control_Form__r.Status__c)=&apos;Submitted&apos;||Text(Export_Control_Form__r.Status__c)=&apos;Approved&apos;) , 
IF(CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)),&apos;GlobalfoundryView&apos;),
HYPERLINK(&quot;ExportControlPdfNew?deviceid=&quot;+Device__c+&quot;&amp;retURL=&quot;+Device__c,&quot;Export Control PDF&quot;,&quot;_blank&quot;),
HYPERLINK(&quot;/apex/ExportControlPdfNew?deviceid=&quot;+Device__c+&quot;&amp;retURL=&quot;+Device__c,&quot;Export Control PDF&quot;,&quot;_blank&quot;)), &quot;PDF link is Inactive&quot;))</formula>
        <label>Preview in PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Device__r.Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Text(Export_Control_Form__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <formula>Export_Control_Form__r.Submitted_Date__c</formula>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <label>Device - Export Control Junction</label>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>Device - Export Control Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device - Export Control Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>